	- added Arnaud Quette as Debian co-maintainer
	- added explanatory comments to test code on how to match, open, read, and
		write.
	- commented custom matcher, but left it in.
	- made all of the code (well, except) swig warning-free
	- disabled -pedantic (per default), but added -Werror (per default)
		(use --enable-pedantic and --disable-werror to change)
	- added special handling for -Werror to swig code, which can't have it set
	- added GCC handling for unused parameters
	- updated TODO list

2004-09-15  Martin F. Krafft (libhid@pobox.madduck.net)

	- Fixed several non-POSIX uses of regular expressions in autotools files
	- Replaced expr by $((...)) shell semantics
	- Added override for autoconf Swig version check

2004-09-10  Martin F. Krafft (libhid@pobox.madduck.net)

	- Changed list addresses and contact information.
	- Added a preliminary webpage for libhid: doc/www/index.html
	- Debian: Added suggestion for pkg-config for libhid-dev.
	- Debian: Removed suggestion for pkg-config from libhid0.

2004-09-09  Martin F. Krafft (libhid@pobox.madduck.net)

	- Added autoconf enable argument for swig.

2004-09-07  Martin F. Krafft (libhid@pobox.madduck.net)

	- Fixed Debian build dependencies.

2004-08-30  Martin F. Krafft (libhid@pobox.madduck.net)

	- Added autoconf check for gcc3, which is now required.
	- Improved autoconf handling for swig.
	- Updated Makefiles to use -fPIC.

2004-06-19  Martin F. Krafft (libhid@pobox.madduck.net)

	- Fixed id member of HIDInterface struct to be 16 instead of 32 bytes.
	- Fixed Debian-related Makefile magic.

2004-05-26  Martin F. Krafft (libhid@pobox.madduck.net)

	- Renamed Python .so modules to proper _foo.so style.
	- Added typehandling for FILE* to make set_debug_stream work.

2004-05-25  Martin F. Krafft (libhid@pobox.madduck.net)

	- Added this ChangeLog
	- Added a swig-generated Python wrapper.
	- Replaced libhid-config with a pkg-config file
	- Reworked the autotools files

Revision: $Id$