@@ -69,21 +69,21 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_installexamples -plibhid-dev test/test_libhid.c
-	dh_install --sourcedir=debian/tmp
-	dh_link
-	dh_python
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_makeshlibs -Xpython
-	dh_installdeb
-	dh_shlibdeps -ldebian/libhid0/usr/lib
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_installchangelogs -a
+	dh_installdocs -a
+	dh_installexamples -a
+	dh_install -a --sourcedir=debian/tmp
+	dh_link -a
+	dh_strip -a
+	dh_python -a
+	dh_compress -a
+	dh_fixperms -a
+	dh_makeshlibs -a -Xpython
+	dh_installdeb -a
+	dh_shlibdeps -a -ldebian/libhid0/usr/lib
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install 
