@@ -1,7 +1,9 @@
 libhid (0.2.8-1) unstable; urgency=medium
 
   * New upstream version.
-  * Added test file to ./examples.
+  * Added test files (C and Python) to ./examples of libhid-dev and python-hid
+    respectively.
+  * Made -dev package arch-independent.
 
  -- martin f. krafft <madduck@debian.org>  Fri, 22 Oct 2004 03:32:55 +0200
 
